restructed database, changed server/routes layout
